--- a/src/components/rotation/transfer-list.module.css
+++ b/src/components/rotation/transfer-list.module.css
@@ -23,6 +23,9 @@
   border-bottom-left-radius: var(--mantine-radius-md);
   border-bottom-right-radius: var(--mantine-radius-md);
   min-height: 224px;
+  height: 100%;
+  max-height: 30dvh;
+  overflow-y: auto;
 }
 
 .input {
